
syntax = "proto3";

package stocktrading;
option  java_multiple_files=true;
option java_package="com.sheb.grpc";
option  java_outer_classname="StockTradingProto";


service StockTradingService{
  // UNARY - RPC -> get current stock price
  rpc getStockPrice(StockRequest) returns (StockResponse);
  rpc addStockPrice(StockRequest) returns (StockResponse);
  rpc addStock(StockRequest) returns (StockResponse);
  rpc GetServerStream (HelloRequest) returns (stream HelloResponse);
  rpc GetClientStream (stream HelloRequest) returns (HelloResponse);
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
  //server streaming
}

message StockRequest{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message ChatMessage {
  string sender = 1;
  string message = 2;
  int64 timestamp = 3;
}